--- a/AulaSubstituto/projeto-angular/src/app/app.component.html
+++ b/AulaSubstituto/projeto-angular/src/app/app.component.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-<h1>Hello World {{ title }}</h1>
+<div *ngIf="selectedHero">
+  <p>o Heroi selecionado é: </p> {{selectedHero ? selectedHero : "Nenhum Heroi selecionado" }}
+</div>
 
-<input [value]="title + 'haha'" {click}="ClickButton()">
+<app-hero-list (selectHero)="selectHero($event)"></app-hero-list>
 
-</body>
-</html>
